--- a/screening/functions/package.json
+++ b/screening/functions/package.json
@@ -18,10 +18,12 @@
     "apexcharts": "^3.35.5",
     "calculate-correlation": "^1.2.3",
     "cors": "^2.8.5",
+    "data-science-js": "^0.0.4",
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.18.1",
     "firebase-admin": "^10.3.0",
     "firebase-functions": "^3.22.0",
+    "js-regression": "^1.0.10",
     "line-notify-nodejs": "^1.0.1",
     "luxon": "^3.0.1",
     "node-random-name": "^1.0.1",
