--- a/uas4gis/package.json
+++ b/uas4gis/package.json
@@ -6,12 +6,14 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mapbox/mapbox-gl-draw": "^1.3.0",
+    "@mapbox/mapbox-gl-sync-move": "^0.3.1",
     "@mui/material": "^5.10.13",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@turf/turf": "^6.5.0",
     "mapbox-gl": "^2.8.2",
+    "mapbox-gl-compare": "^0.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
