--- a/uas4gis/package.json
+++ b/uas4gis/package.json
@@ -14,6 +14,7 @@
     "@turf/turf": "^6.5.0",
     "mapbox-gl": "^2.8.2",
     "mapbox-gl-compare": "^0.4.1",
+    "mathjs": "^11.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
