--- a/uas4gis/public/manifest.json
+++ b/uas4gis/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "NKRAFA Map",
+  "name": "ระบบข้อมูลภูมิสารสนเทศของ รร.นนก. ณ ที่ตั้ง อ.มวกเหล็ก จว.สระบุรี",
   "icons": [
     {
       "src": "favicon.ico",
