--- a/uas4gis/package.json
+++ b/uas4gis/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "simplebar-react": "^2.4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
