--- a/uas4gis/package.json
+++ b/uas4gis/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.5",
     "@mapbox/mapbox-gl-draw": "^1.3.0",
     "@mapbox/mapbox-gl-sync-move": "^0.3.1",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.10.13",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
