--- a/uas4gis/package.json
+++ b/uas4gis/package.json
@@ -5,21 +5,26 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@faker-js/faker": "^7.6.0",
+    "@line/liff": "^2.21.4",
     "@mapbox/mapbox-gl-draw": "^1.3.0",
     "@mapbox/mapbox-gl-sync-move": "^0.3.1",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.10.13",
+    "@mui/system": "^5.11.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@turf/turf": "^6.5.0",
+    "axios": "^1.2.2",
     "mapbox-gl": "^2.8.2",
     "mapbox-gl-compare": "^0.4.1",
     "mathjs": "^11.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.4",
-    "react-scripts": "5.0.1",
+    "react-liff": "^2.1.0",
+    "react-router-dom": "^6.6.1",
+    "react-scripts": "^5.0.1",
     "simplebar-react": "^2.4.3",
     "web-vitals": "^2.1.4"
   },
