--- a/uas4gis/package.json
+++ b/uas4gis/package.json
@@ -2,6 +2,7 @@
   "name": "uas4gis",
   "version": "0.1.0",
   "private": true,
+  "proxy" : "http://localhost:8888",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
