--- a/uas4gis/package.json
+++ b/uas4gis/package.json
@@ -2,7 +2,7 @@
   "name": "uas4gis",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "http://localhost:8888",
+  "proxy": "http://localhost:8888",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -19,6 +19,8 @@
     "axios": "^1.2.2",
     "mapbox-gl": "^2.8.2",
     "mapbox-gl-compare": "^0.4.1",
+    "mapbox-gl-draw-freehand-mode": "^2.1.0",
+    "mapbox-gl-draw-paint-mode": "^1.1.1",
     "mathjs": "^11.4.0",
     "md5": "^2.3.0",
     "react": "^18.2.0",
