--- a/uas4gis/package.json
+++ b/uas4gis/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.2.2",
     "mapbox-gl": "^2.8.2",
     "mapbox-gl-compare": "^0.4.1",
+    "mapbox-gl-draw-circle": "^1.1.2",
     "mapbox-gl-draw-freehand-mode": "^2.1.0",
     "mapbox-gl-draw-paint-mode": "^1.1.1",
     "mathjs": "^11.4.0",
